--- a/credit-risk-analysis.ipynb
+++ b/credit-risk-analysis.ipynb
@@ -391,6 +391,72 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(30000, 25)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 30000 entries, 0 to 29999\n",
+      "Data columns (total 25 columns):\n",
+      "ID                            30000 non-null int64\n",
+      "LIMIT_BAL                     30000 non-null float64\n",
+      "SEX                           30000 non-null int64\n",
+      "EDUCATION                     30000 non-null int64\n",
+      "MARRIAGE                      30000 non-null int64\n",
+      "AGE                           30000 non-null int64\n",
+      "PAY_0                         30000 non-null int64\n",
+      "PAY_2                         30000 non-null int64\n",
+      "PAY_3                         30000 non-null int64\n",
+      "PAY_4                         30000 non-null int64\n",
+      "PAY_5                         30000 non-null int64\n",
+      "PAY_6                         30000 non-null int64\n",
+      "BILL_AMT1                     30000 non-null float64\n",
+      "BILL_AMT2                     30000 non-null float64\n",
+      "BILL_AMT3                     30000 non-null float64\n",
+      "BILL_AMT4                     30000 non-null float64\n",
+      "BILL_AMT5                     30000 non-null float64\n",
+      "BILL_AMT6                     30000 non-null float64\n",
+      "PAY_AMT1                      30000 non-null float64\n",
+      "PAY_AMT2                      30000 non-null float64\n",
+      "PAY_AMT3                      30000 non-null float64\n",
+      "PAY_AMT4                      30000 non-null float64\n",
+      "PAY_AMT5                      30000 non-null float64\n",
+      "PAY_AMT6                      30000 non-null float64\n",
+      "default.payment.next.month    30000 non-null int64\n",
+      "dtypes: float64(13), int64(12)\n",
+      "memory usage: 5.7 MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
