--- a/credit-risk-analysis.ipynb
+++ b/credit-risk-analysis.ipynb
@@ -1261,6 +1261,408 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        24\n",
+       "1        26\n",
+       "2        34\n",
+       "3        37\n",
+       "4        57\n",
+       "         ..\n",
+       "29995    39\n",
+       "29996    43\n",
+       "29997    37\n",
+       "29998    41\n",
+       "29999    46\n",
+       "Name: AGE, Length: 30000, dtype: int64"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.AGE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>LIMIT_BAL</th>\n",
+       "      <th>SEX</th>\n",
+       "      <th>EDUCATION</th>\n",
+       "      <th>MARRIAGE</th>\n",
+       "      <th>AGE</th>\n",
+       "      <th>PAY_0</th>\n",
+       "      <th>PAY_2</th>\n",
+       "      <th>PAY_3</th>\n",
+       "      <th>PAY_4</th>\n",
+       "      <th>...</th>\n",
+       "      <th>BILL_AMT4</th>\n",
+       "      <th>BILL_AMT5</th>\n",
+       "      <th>BILL_AMT6</th>\n",
+       "      <th>PAY_AMT1</th>\n",
+       "      <th>PAY_AMT2</th>\n",
+       "      <th>PAY_AMT3</th>\n",
+       "      <th>PAY_AMT4</th>\n",
+       "      <th>PAY_AMT5</th>\n",
+       "      <th>PAY_AMT6</th>\n",
+       "      <th>default.payment.next.month</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>90000.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>34</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>14331.0</td>\n",
+       "      <td>14948.0</td>\n",
+       "      <td>15549.0</td>\n",
+       "      <td>1518.0</td>\n",
+       "      <td>1500.0</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>5000.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>50000.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>37</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>28314.0</td>\n",
+       "      <td>28959.0</td>\n",
+       "      <td>29547.0</td>\n",
+       "      <td>2000.0</td>\n",
+       "      <td>2019.0</td>\n",
+       "      <td>1200.0</td>\n",
+       "      <td>1100.0</td>\n",
+       "      <td>1069.0</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>50000.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>57</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>20940.0</td>\n",
+       "      <td>19146.0</td>\n",
+       "      <td>19131.0</td>\n",
+       "      <td>2000.0</td>\n",
+       "      <td>36681.0</td>\n",
+       "      <td>10000.0</td>\n",
+       "      <td>9000.0</td>\n",
+       "      <td>689.0</td>\n",
+       "      <td>679.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>50000.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>37</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>19394.0</td>\n",
+       "      <td>19619.0</td>\n",
+       "      <td>20024.0</td>\n",
+       "      <td>2500.0</td>\n",
+       "      <td>1815.0</td>\n",
+       "      <td>657.0</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>800.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>10</td>\n",
+       "      <td>20000.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>35</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>13007.0</td>\n",
+       "      <td>13912.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>13007.0</td>\n",
+       "      <td>1122.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29995</th>\n",
+       "      <td>29996</td>\n",
+       "      <td>220000.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>39</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>88004.0</td>\n",
+       "      <td>31237.0</td>\n",
+       "      <td>15980.0</td>\n",
+       "      <td>8500.0</td>\n",
+       "      <td>20000.0</td>\n",
+       "      <td>5003.0</td>\n",
+       "      <td>3047.0</td>\n",
+       "      <td>5000.0</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29996</th>\n",
+       "      <td>29997</td>\n",
+       "      <td>150000.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>43</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>8979.0</td>\n",
+       "      <td>5190.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1837.0</td>\n",
+       "      <td>3526.0</td>\n",
+       "      <td>8998.0</td>\n",
+       "      <td>129.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29997</th>\n",
+       "      <td>29998</td>\n",
+       "      <td>30000.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>37</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>20878.0</td>\n",
+       "      <td>20582.0</td>\n",
+       "      <td>19357.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>22000.0</td>\n",
+       "      <td>4200.0</td>\n",
+       "      <td>2000.0</td>\n",
+       "      <td>3100.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29998</th>\n",
+       "      <td>29999</td>\n",
+       "      <td>80000.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>41</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>52774.0</td>\n",
+       "      <td>11855.0</td>\n",
+       "      <td>48944.0</td>\n",
+       "      <td>85900.0</td>\n",
+       "      <td>3409.0</td>\n",
+       "      <td>1178.0</td>\n",
+       "      <td>1926.0</td>\n",
+       "      <td>52964.0</td>\n",
+       "      <td>1804.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29999</th>\n",
+       "      <td>30000</td>\n",
+       "      <td>50000.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>46</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>36535.0</td>\n",
+       "      <td>32428.0</td>\n",
+       "      <td>15313.0</td>\n",
+       "      <td>2078.0</td>\n",
+       "      <td>1800.0</td>\n",
+       "      <td>1430.0</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>18987 rows × 25 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          ID  LIMIT_BAL  SEX  EDUCATION  MARRIAGE  AGE  PAY_0  PAY_2  PAY_3  \\\n",
+       "2          3    90000.0    2          2         2   34      0      0      0   \n",
+       "3          4    50000.0    2          2         1   37      0      0      0   \n",
+       "4          5    50000.0    1          2         1   57     -1      0     -1   \n",
+       "5          6    50000.0    1          1         2   37      0      0      0   \n",
+       "9         10    20000.0    1          3         2   35     -2     -2     -2   \n",
+       "...      ...        ...  ...        ...       ...  ...    ...    ...    ...   \n",
+       "29995  29996   220000.0    1          3         1   39      0      0      0   \n",
+       "29996  29997   150000.0    1          3         2   43     -1     -1     -1   \n",
+       "29997  29998    30000.0    1          2         2   37      4      3      2   \n",
+       "29998  29999    80000.0    1          3         1   41      1     -1      0   \n",
+       "29999  30000    50000.0    1          2         1   46      0      0      0   \n",
+       "\n",
+       "       PAY_4  ...  BILL_AMT4  BILL_AMT5  BILL_AMT6  PAY_AMT1  PAY_AMT2  \\\n",
+       "2          0  ...    14331.0    14948.0    15549.0    1518.0    1500.0   \n",
+       "3          0  ...    28314.0    28959.0    29547.0    2000.0    2019.0   \n",
+       "4          0  ...    20940.0    19146.0    19131.0    2000.0   36681.0   \n",
+       "5          0  ...    19394.0    19619.0    20024.0    2500.0    1815.0   \n",
+       "9         -2  ...        0.0    13007.0    13912.0       0.0       0.0   \n",
+       "...      ...  ...        ...        ...        ...       ...       ...   \n",
+       "29995      0  ...    88004.0    31237.0    15980.0    8500.0   20000.0   \n",
+       "29996     -1  ...     8979.0     5190.0        0.0    1837.0    3526.0   \n",
+       "29997     -1  ...    20878.0    20582.0    19357.0       0.0       0.0   \n",
+       "29998      0  ...    52774.0    11855.0    48944.0   85900.0    3409.0   \n",
+       "29999      0  ...    36535.0    32428.0    15313.0    2078.0    1800.0   \n",
+       "\n",
+       "       PAY_AMT3  PAY_AMT4  PAY_AMT5  PAY_AMT6  default.payment.next.month  \n",
+       "2        1000.0    1000.0    1000.0    5000.0                           0  \n",
+       "3        1200.0    1100.0    1069.0    1000.0                           0  \n",
+       "4       10000.0    9000.0     689.0     679.0                           0  \n",
+       "5         657.0    1000.0    1000.0     800.0                           0  \n",
+       "9           0.0   13007.0    1122.0       0.0                           0  \n",
+       "...         ...       ...       ...       ...                         ...  \n",
+       "29995    5003.0    3047.0    5000.0    1000.0                           0  \n",
+       "29996    8998.0     129.0       0.0       0.0                           0  \n",
+       "29997   22000.0    4200.0    2000.0    3100.0                           1  \n",
+       "29998    1178.0    1926.0   52964.0    1804.0                           1  \n",
+       "29999    1430.0    1000.0    1000.0    1000.0                           1  \n",
+       "\n",
+       "[18987 rows x 25 columns]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df.AGE > 30]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
