--- a/credit-risk-analysis.ipynb
+++ b/credit-risk-analysis.ipynb
@@ -2065,6 +2065,377 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>LIMIT_BAL</th>\n",
+       "      <th>SEX</th>\n",
+       "      <th>EDUCATION</th>\n",
+       "      <th>MARRIAGE</th>\n",
+       "      <th>AGE</th>\n",
+       "      <th>PAY_0</th>\n",
+       "      <th>PAY_2</th>\n",
+       "      <th>PAY_3</th>\n",
+       "      <th>PAY_4</th>\n",
+       "      <th>...</th>\n",
+       "      <th>BILL_AMT4</th>\n",
+       "      <th>BILL_AMT5</th>\n",
+       "      <th>BILL_AMT6</th>\n",
+       "      <th>PAY_AMT1</th>\n",
+       "      <th>PAY_AMT2</th>\n",
+       "      <th>PAY_AMT3</th>\n",
+       "      <th>PAY_AMT4</th>\n",
+       "      <th>PAY_AMT5</th>\n",
+       "      <th>PAY_AMT6</th>\n",
+       "      <th>default.payment.next.month</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>9</td>\n",
+       "      <td>140000.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>28</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>12211.0</td>\n",
+       "      <td>11793.0</td>\n",
+       "      <td>3719.0</td>\n",
+       "      <td>3329.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>432.0</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>11</td>\n",
+       "      <td>200000.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>34</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2513.0</td>\n",
+       "      <td>1828.0</td>\n",
+       "      <td>3731.0</td>\n",
+       "      <td>2306.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>300.0</td>\n",
+       "      <td>3738.0</td>\n",
+       "      <td>66.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>14</td>\n",
+       "      <td>70000.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>30</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>66782.0</td>\n",
+       "      <td>36137.0</td>\n",
+       "      <td>36894.0</td>\n",
+       "      <td>3200.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3000.0</td>\n",
+       "      <td>3000.0</td>\n",
+       "      <td>1500.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>17</td>\n",
+       "      <td>20000.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>24</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>18338.0</td>\n",
+       "      <td>17905.0</td>\n",
+       "      <td>19104.0</td>\n",
+       "      <td>3200.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1500.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1650.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>40</td>\n",
+       "      <td>280000.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>31</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>9976.0</td>\n",
+       "      <td>17976.0</td>\n",
+       "      <td>9477.0</td>\n",
+       "      <td>9075.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>9976.0</td>\n",
+       "      <td>8000.0</td>\n",
+       "      <td>9525.0</td>\n",
+       "      <td>781.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29976</th>\n",
+       "      <td>29977</td>\n",
+       "      <td>40000.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>47</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>51259.0</td>\n",
+       "      <td>47151.0</td>\n",
+       "      <td>46934.0</td>\n",
+       "      <td>4000.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2000.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3520.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29981</th>\n",
+       "      <td>29982</td>\n",
+       "      <td>50000.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>44</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>28192.0</td>\n",
+       "      <td>22676.0</td>\n",
+       "      <td>14647.0</td>\n",
+       "      <td>2300.0</td>\n",
+       "      <td>1700.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>517.0</td>\n",
+       "      <td>503.0</td>\n",
+       "      <td>585.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29991</th>\n",
+       "      <td>29992</td>\n",
+       "      <td>210000.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>34</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2500.0</td>\n",
+       "      <td>2500.0</td>\n",
+       "      <td>2500.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29994</th>\n",
+       "      <td>29995</td>\n",
+       "      <td>80000.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>34</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>77519.0</td>\n",
+       "      <td>82607.0</td>\n",
+       "      <td>81158.0</td>\n",
+       "      <td>7000.0</td>\n",
+       "      <td>3500.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>7000.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4000.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29997</th>\n",
+       "      <td>29998</td>\n",
+       "      <td>30000.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>37</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>20878.0</td>\n",
+       "      <td>20582.0</td>\n",
+       "      <td>19357.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>22000.0</td>\n",
+       "      <td>4200.0</td>\n",
+       "      <td>2000.0</td>\n",
+       "      <td>3100.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4213 rows × 25 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          ID  LIMIT_BAL  SEX  EDUCATION  MARRIAGE  AGE  PAY_0  PAY_2  PAY_3  \\\n",
+       "8          9   140000.0    2          3         1   28      0      0      2   \n",
+       "10        11   200000.0    2          3         2   34      0      0      2   \n",
+       "13        14    70000.0    1          2         2   30      1      2      2   \n",
+       "16        17    20000.0    1          1         2   24      0      0      2   \n",
+       "39        40   280000.0    1          1         2   31     -1     -1      2   \n",
+       "...      ...        ...  ...        ...       ...  ...    ...    ...    ...   \n",
+       "29976  29977    40000.0    1          2         2   47      2      2      3   \n",
+       "29981  29982    50000.0    1          2         1   44      1      2      2   \n",
+       "29991  29992   210000.0    1          2         1   34      3      2      2   \n",
+       "29994  29995    80000.0    1          2         2   34      2      2      2   \n",
+       "29997  29998    30000.0    1          2         2   37      4      3      2   \n",
+       "\n",
+       "       PAY_4  ...  BILL_AMT4  BILL_AMT5  BILL_AMT6  PAY_AMT1  PAY_AMT2  \\\n",
+       "8          0  ...    12211.0    11793.0     3719.0    3329.0       0.0   \n",
+       "10         0  ...     2513.0     1828.0     3731.0    2306.0      12.0   \n",
+       "13         0  ...    66782.0    36137.0    36894.0    3200.0       0.0   \n",
+       "16         2  ...    18338.0    17905.0    19104.0    3200.0       0.0   \n",
+       "39        -1  ...     9976.0    17976.0     9477.0    9075.0       0.0   \n",
+       "...      ...  ...        ...        ...        ...       ...       ...   \n",
+       "29976      2  ...    51259.0    47151.0    46934.0    4000.0       0.0   \n",
+       "29981      2  ...    28192.0    22676.0    14647.0    2300.0    1700.0   \n",
+       "29991      2  ...     2500.0     2500.0     2500.0       0.0       0.0   \n",
+       "29994      2  ...    77519.0    82607.0    81158.0    7000.0    3500.0   \n",
+       "29997     -1  ...    20878.0    20582.0    19357.0       0.0       0.0   \n",
+       "\n",
+       "       PAY_AMT3  PAY_AMT4  PAY_AMT5  PAY_AMT6  default.payment.next.month  \n",
+       "8         432.0    1000.0    1000.0    1000.0                           0  \n",
+       "10         50.0     300.0    3738.0      66.0                           0  \n",
+       "13       3000.0    3000.0    1500.0       0.0                           1  \n",
+       "16       1500.0       0.0    1650.0       0.0                           1  \n",
+       "39       9976.0    8000.0    9525.0     781.0                           0  \n",
+       "...         ...       ...       ...       ...                         ...  \n",
+       "29976    2000.0       0.0    3520.0       0.0                           1  \n",
+       "29981       0.0     517.0     503.0     585.0                           0  \n",
+       "29991       0.0       0.0       0.0       0.0                           1  \n",
+       "29994       0.0    7000.0       0.0    4000.0                           1  \n",
+       "29997   22000.0    4200.0    2000.0    3100.0                           1  \n",
+       "\n",
+       "[4213 rows x 25 columns]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df.PAY_3 > 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
