--- a/credit-risk-analysis.ipynb
+++ b/credit-risk-analysis.ipynb
@@ -2436,6 +2436,377 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>LIMIT_BAL</th>\n",
+       "      <th>SEX</th>\n",
+       "      <th>EDUCATION</th>\n",
+       "      <th>MARRIAGE</th>\n",
+       "      <th>AGE</th>\n",
+       "      <th>PAY_0</th>\n",
+       "      <th>PAY_2</th>\n",
+       "      <th>PAY_3</th>\n",
+       "      <th>PAY_4</th>\n",
+       "      <th>...</th>\n",
+       "      <th>BILL_AMT4</th>\n",
+       "      <th>BILL_AMT5</th>\n",
+       "      <th>BILL_AMT6</th>\n",
+       "      <th>PAY_AMT1</th>\n",
+       "      <th>PAY_AMT2</th>\n",
+       "      <th>PAY_AMT3</th>\n",
+       "      <th>PAY_AMT4</th>\n",
+       "      <th>PAY_AMT5</th>\n",
+       "      <th>PAY_AMT6</th>\n",
+       "      <th>default.payment.next.month</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>8</td>\n",
+       "      <td>100000.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>23</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>221.0</td>\n",
+       "      <td>-159.0</td>\n",
+       "      <td>567.0</td>\n",
+       "      <td>380.0</td>\n",
+       "      <td>601.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>581.0</td>\n",
+       "      <td>1687.0</td>\n",
+       "      <td>1542.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>10</td>\n",
+       "      <td>20000.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>35</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>13007.0</td>\n",
+       "      <td>13912.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>13007.0</td>\n",
+       "      <td>1122.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>12</td>\n",
+       "      <td>260000.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>51</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>8517.0</td>\n",
+       "      <td>22287.0</td>\n",
+       "      <td>13668.0</td>\n",
+       "      <td>21818.0</td>\n",
+       "      <td>9966.0</td>\n",
+       "      <td>8583.0</td>\n",
+       "      <td>22301.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3640.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>19</td>\n",
+       "      <td>360000.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>49</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>20</td>\n",
+       "      <td>180000.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>29</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29986</th>\n",
+       "      <td>29987</td>\n",
+       "      <td>360000.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>35</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29989</th>\n",
+       "      <td>29990</td>\n",
+       "      <td>150000.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>35</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>780.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>9054.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>783.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29993</th>\n",
+       "      <td>29994</td>\n",
+       "      <td>100000.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>38</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>70626.0</td>\n",
+       "      <td>69473.0</td>\n",
+       "      <td>55004.0</td>\n",
+       "      <td>2000.0</td>\n",
+       "      <td>111784.0</td>\n",
+       "      <td>4000.0</td>\n",
+       "      <td>3000.0</td>\n",
+       "      <td>2000.0</td>\n",
+       "      <td>2000.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29996</th>\n",
+       "      <td>29997</td>\n",
+       "      <td>150000.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>43</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>8979.0</td>\n",
+       "      <td>5190.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1837.0</td>\n",
+       "      <td>3526.0</td>\n",
+       "      <td>8998.0</td>\n",
+       "      <td>129.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29998</th>\n",
+       "      <td>29999</td>\n",
+       "      <td>80000.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>41</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>52774.0</td>\n",
+       "      <td>11855.0</td>\n",
+       "      <td>48944.0</td>\n",
+       "      <td>85900.0</td>\n",
+       "      <td>3409.0</td>\n",
+       "      <td>1178.0</td>\n",
+       "      <td>1926.0</td>\n",
+       "      <td>52964.0</td>\n",
+       "      <td>1804.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>9832 rows × 25 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          ID  LIMIT_BAL  SEX  EDUCATION  MARRIAGE  AGE  PAY_0  PAY_2  PAY_3  \\\n",
+       "7          8   100000.0    2          2         2   23      0     -1     -1   \n",
+       "9         10    20000.0    1          3         2   35     -2     -2     -2   \n",
+       "11        12   260000.0    2          1         2   51     -1     -1     -1   \n",
+       "18        19   360000.0    2          1         1   49      1     -2     -2   \n",
+       "19        20   180000.0    2          1         2   29      1     -2     -2   \n",
+       "...      ...        ...  ...        ...       ...  ...    ...    ...    ...   \n",
+       "29986  29987   360000.0    1          1         2   35     -1     -1     -2   \n",
+       "29989  29990   150000.0    1          1         2   35     -1     -1     -1   \n",
+       "29993  29994   100000.0    1          1         2   38      0     -1     -1   \n",
+       "29996  29997   150000.0    1          3         2   43     -1     -1     -1   \n",
+       "29998  29999    80000.0    1          3         1   41      1     -1      0   \n",
+       "\n",
+       "       PAY_4  ...  BILL_AMT4  BILL_AMT5  BILL_AMT6  PAY_AMT1  PAY_AMT2  \\\n",
+       "7          0  ...      221.0     -159.0      567.0     380.0     601.0   \n",
+       "9         -2  ...        0.0    13007.0    13912.0       0.0       0.0   \n",
+       "11        -1  ...     8517.0    22287.0    13668.0   21818.0    9966.0   \n",
+       "18        -2  ...        0.0        0.0        0.0       0.0       0.0   \n",
+       "19        -2  ...        0.0        0.0        0.0       0.0       0.0   \n",
+       "...      ...  ...        ...        ...        ...       ...       ...   \n",
+       "29986     -2  ...        0.0        0.0        0.0       0.0       0.0   \n",
+       "29989     -1  ...      780.0        0.0        0.0    9054.0       0.0   \n",
+       "29993      0  ...    70626.0    69473.0    55004.0    2000.0  111784.0   \n",
+       "29996     -1  ...     8979.0     5190.0        0.0    1837.0    3526.0   \n",
+       "29998      0  ...    52774.0    11855.0    48944.0   85900.0    3409.0   \n",
+       "\n",
+       "       PAY_AMT3  PAY_AMT4  PAY_AMT5  PAY_AMT6  default.payment.next.month  \n",
+       "7           0.0     581.0    1687.0    1542.0                           0  \n",
+       "9           0.0   13007.0    1122.0       0.0                           0  \n",
+       "11       8583.0   22301.0       0.0    3640.0                           0  \n",
+       "18          0.0       0.0       0.0       0.0                           0  \n",
+       "19          0.0       0.0       0.0       0.0                           0  \n",
+       "...         ...       ...       ...       ...                         ...  \n",
+       "29986       0.0       0.0       0.0       0.0                           0  \n",
+       "29989     783.0       0.0       0.0       0.0                           0  \n",
+       "29993    4000.0    3000.0    2000.0    2000.0                           0  \n",
+       "29996    8998.0     129.0       0.0       0.0                           0  \n",
+       "29998    1178.0    1926.0   52964.0    1804.0                           1  \n",
+       "\n",
+       "[9832 rows x 25 columns]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df.PAY_2 < 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
