--- a/credit-risk-analysis.ipynb
+++ b/credit-risk-analysis.ipynb
@@ -2807,7 +2807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2817,7 +2817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2826,7 +2826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -3212,7 +3212,7 @@
        "[1319 rows x 21 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3223,7 +3223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -3265,7 +3265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -3274,7 +3274,7 @@
        "(1319, 21)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3285,7 +3285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -3497,7 +3497,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3508,7 +3508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -3865,7 +3865,7 @@
        "[10 rows x 21 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3876,7 +3876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -3896,7 +3896,7 @@
        "Name: HumidityHighPercent, Length: 1319, dtype: bool"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3907,7 +3907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -3968,7 +3968,7 @@
        "[0 rows x 21 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3979,7 +3979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -3999,7 +3999,7 @@
        "Name: HumidityHighPercent, Length: 1319, dtype: bool"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4010,7 +4010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -4396,7 +4396,7 @@
        "[456 rows x 21 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4407,7 +4407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4417,25 +4417,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df[['TempHighF','TempAvgF','TempLowF','HumidityAvgPercent','SeaLevelPressureAvgInches','VisibilityAvgMiles','WindAvgMPH']]"
+    "df1 = df[['TempHighF','TempAvgF','TempLowF','HumidityAvgPercent','SeaLevelPressureAvgInches','VisibilityAvgMiles','WindAvgMPH']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x124c54590>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1252bba10>"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -4459,17 +4459,375 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from math import sqrt\n",
+    "from scipy import stats"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>TempHighF</th>\n",
+       "      <th>TempAvgF</th>\n",
+       "      <th>TempLowF</th>\n",
+       "      <th>HumidityAvgPercent</th>\n",
+       "      <th>SeaLevelPressureAvgInches</th>\n",
+       "      <th>VisibilityAvgMiles</th>\n",
+       "      <th>WindAvgMPH</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>74</td>\n",
+       "      <td>60</td>\n",
+       "      <td>45</td>\n",
+       "      <td>75</td>\n",
+       "      <td>29.68</td>\n",
+       "      <td>7</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>56</td>\n",
+       "      <td>48</td>\n",
+       "      <td>39</td>\n",
+       "      <td>68</td>\n",
+       "      <td>30.13</td>\n",
+       "      <td>10</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>58</td>\n",
+       "      <td>45</td>\n",
+       "      <td>32</td>\n",
+       "      <td>52</td>\n",
+       "      <td>30.49</td>\n",
+       "      <td>10</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>61</td>\n",
+       "      <td>46</td>\n",
+       "      <td>31</td>\n",
+       "      <td>56</td>\n",
+       "      <td>30.45</td>\n",
+       "      <td>10</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>58</td>\n",
+       "      <td>50</td>\n",
+       "      <td>41</td>\n",
+       "      <td>71</td>\n",
+       "      <td>30.33</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   TempHighF  TempAvgF  TempLowF HumidityAvgPercent SeaLevelPressureAvgInches  \\\n",
+       "0         74        60        45                 75                     29.68   \n",
+       "1         56        48        39                 68                     30.13   \n",
+       "2         58        45        32                 52                     30.49   \n",
+       "3         61        46        31                 56                     30.45   \n",
+       "4         58        50        41                 71                     30.33   \n",
+       "\n",
+       "  VisibilityAvgMiles WindAvgMPH  \n",
+       "0                  7          4  \n",
+       "1                 10          6  \n",
+       "2                 10          3  \n",
+       "3                 10          4  \n",
+       "4                 10          2  "
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>TempHighF</th>\n",
+       "      <th>TempAvgF</th>\n",
+       "      <th>TempLowF</th>\n",
+       "      <th>DewPointHighF</th>\n",
+       "      <th>DewPointAvgF</th>\n",
+       "      <th>DewPointLowF</th>\n",
+       "      <th>HumidityHighPercent</th>\n",
+       "      <th>HumidityAvgPercent</th>\n",
+       "      <th>HumidityLowPercent</th>\n",
+       "      <th>...</th>\n",
+       "      <th>SeaLevelPressureAvgInches</th>\n",
+       "      <th>SeaLevelPressureLowInches</th>\n",
+       "      <th>VisibilityHighMiles</th>\n",
+       "      <th>VisibilityAvgMiles</th>\n",
+       "      <th>VisibilityLowMiles</th>\n",
+       "      <th>WindHighMPH</th>\n",
+       "      <th>WindAvgMPH</th>\n",
+       "      <th>WindGustMPH</th>\n",
+       "      <th>PrecipitationSumInches</th>\n",
+       "      <th>Events</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2013-12-21</td>\n",
+       "      <td>74</td>\n",
+       "      <td>60</td>\n",
+       "      <td>45</td>\n",
+       "      <td>67</td>\n",
+       "      <td>49</td>\n",
+       "      <td>43</td>\n",
+       "      <td>93</td>\n",
+       "      <td>75</td>\n",
+       "      <td>57</td>\n",
+       "      <td>...</td>\n",
+       "      <td>29.68</td>\n",
+       "      <td>29.59</td>\n",
+       "      <td>10</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2</td>\n",
+       "      <td>20</td>\n",
+       "      <td>4</td>\n",
+       "      <td>31</td>\n",
+       "      <td>0.46</td>\n",
+       "      <td>Rain , Thunderstorm</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2013-12-22</td>\n",
+       "      <td>56</td>\n",
+       "      <td>48</td>\n",
+       "      <td>39</td>\n",
+       "      <td>43</td>\n",
+       "      <td>36</td>\n",
+       "      <td>28</td>\n",
+       "      <td>93</td>\n",
+       "      <td>68</td>\n",
+       "      <td>43</td>\n",
+       "      <td>...</td>\n",
+       "      <td>30.13</td>\n",
+       "      <td>29.87</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>5</td>\n",
+       "      <td>16</td>\n",
+       "      <td>6</td>\n",
+       "      <td>25</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2013-12-23</td>\n",
+       "      <td>58</td>\n",
+       "      <td>45</td>\n",
+       "      <td>32</td>\n",
+       "      <td>31</td>\n",
+       "      <td>27</td>\n",
+       "      <td>23</td>\n",
+       "      <td>76</td>\n",
+       "      <td>52</td>\n",
+       "      <td>27</td>\n",
+       "      <td>...</td>\n",
+       "      <td>30.49</td>\n",
+       "      <td>30.41</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>8</td>\n",
+       "      <td>3</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2013-12-24</td>\n",
+       "      <td>61</td>\n",
+       "      <td>46</td>\n",
+       "      <td>31</td>\n",
+       "      <td>36</td>\n",
+       "      <td>28</td>\n",
+       "      <td>21</td>\n",
+       "      <td>89</td>\n",
+       "      <td>56</td>\n",
+       "      <td>22</td>\n",
+       "      <td>...</td>\n",
+       "      <td>30.45</td>\n",
+       "      <td>30.3</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>7</td>\n",
+       "      <td>12</td>\n",
+       "      <td>4</td>\n",
+       "      <td>20</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2013-12-25</td>\n",
+       "      <td>58</td>\n",
+       "      <td>50</td>\n",
+       "      <td>41</td>\n",
+       "      <td>44</td>\n",
+       "      <td>40</td>\n",
+       "      <td>36</td>\n",
+       "      <td>86</td>\n",
+       "      <td>71</td>\n",
+       "      <td>56</td>\n",
+       "      <td>...</td>\n",
+       "      <td>30.33</td>\n",
+       "      <td>30.27</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>7</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2</td>\n",
+       "      <td>16</td>\n",
+       "      <td>T</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 21 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Date  TempHighF  TempAvgF  TempLowF DewPointHighF DewPointAvgF  \\\n",
+       "0  2013-12-21         74        60        45            67           49   \n",
+       "1  2013-12-22         56        48        39            43           36   \n",
+       "2  2013-12-23         58        45        32            31           27   \n",
+       "3  2013-12-24         61        46        31            36           28   \n",
+       "4  2013-12-25         58        50        41            44           40   \n",
+       "\n",
+       "  DewPointLowF HumidityHighPercent HumidityAvgPercent HumidityLowPercent  ...  \\\n",
+       "0           43                  93                 75                 57  ...   \n",
+       "1           28                  93                 68                 43  ...   \n",
+       "2           23                  76                 52                 27  ...   \n",
+       "3           21                  89                 56                 22  ...   \n",
+       "4           36                  86                 71                 56  ...   \n",
+       "\n",
+       "  SeaLevelPressureAvgInches SeaLevelPressureLowInches VisibilityHighMiles  \\\n",
+       "0                     29.68                     29.59                  10   \n",
+       "1                     30.13                     29.87                  10   \n",
+       "2                     30.49                     30.41                  10   \n",
+       "3                     30.45                      30.3                  10   \n",
+       "4                     30.33                     30.27                  10   \n",
+       "\n",
+       "  VisibilityAvgMiles VisibilityLowMiles WindHighMPH WindAvgMPH WindGustMPH  \\\n",
+       "0                  7                  2          20          4          31   \n",
+       "1                 10                  5          16          6          25   \n",
+       "2                 10                 10           8          3          12   \n",
+       "3                 10                  7          12          4          20   \n",
+       "4                 10                  7          10          2          16   \n",
+       "\n",
+       "  PrecipitationSumInches               Events  \n",
+       "0                   0.46  Rain , Thunderstorm  \n",
+       "1                      0                       \n",
+       "2                      0                       \n",
+       "3                      0                       \n",
+       "4                      T                       \n",
+       "\n",
+       "[5 rows x 21 columns]"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.8819769159731726, 0.0)"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "alpha = 0.01\n",
+    "r, p = stats.pearsonr(df.TempHighF, df.TempLowF)\n",
+    "r, p"
+   ]
   },
   {
    "cell_type": "code",
