--- a/credit-risk-analysis.ipynb
+++ b/credit-risk-analysis.ipynb
@@ -6543,6 +6543,48 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1319 entries, 0 to 1318\n",
+      "Data columns (total 21 columns):\n",
+      "Date                          1319 non-null object\n",
+      "TempHighF                     1319 non-null int64\n",
+      "TempAvgF                      1319 non-null int64\n",
+      "TempLowF                      1319 non-null int64\n",
+      "DewPointHighF                 1319 non-null object\n",
+      "DewPointAvgF                  1319 non-null object\n",
+      "DewPointLowF                  1319 non-null object\n",
+      "HumidityHighPercent           1319 non-null object\n",
+      "HumidityAvgPercent            1319 non-null object\n",
+      "HumidityLowPercent            1319 non-null object\n",
+      "SeaLevelPressureHighInches    1319 non-null object\n",
+      "SeaLevelPressureAvgInches     1319 non-null object\n",
+      "SeaLevelPressureLowInches     1319 non-null object\n",
+      "VisibilityHighMiles           1319 non-null object\n",
+      "VisibilityAvgMiles            1319 non-null object\n",
+      "VisibilityLowMiles            1319 non-null object\n",
+      "WindHighMPH                   1319 non-null object\n",
+      "WindAvgMPH                    1319 non-null object\n",
+      "WindGustMPH                   1319 non-null object\n",
+      "PrecipitationSumInches        1319 non-null object\n",
+      "Events                        1319 non-null object\n",
+      "dtypes: int64(3), object(18)\n",
+      "memory usage: 216.5+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
