--- a/credit-risk-analysis.ipynb
+++ b/credit-risk-analysis.ipynb
@@ -6585,6 +6585,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "91      69\n",
+       "96      72\n",
+       "134     76\n",
+       "176     83\n",
+       "197     84\n",
+       "        ..\n",
+       "1262    78\n",
+       "1283    82\n",
+       "1284    81\n",
+       "1302    87\n",
+       "1303    84\n",
+       "Name: TempAvgF, Length: 225, dtype: int64"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2.TempAvgF"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
